fix: touch on mobile

--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
 	box-sizing: border-box;
 }
 
-html {
-	touch-action: manipulation;
-}
-
 html,
 body {
 	background-color: black;
